--- a/TODO
+++ b/TODO
@@ -4,12 +4,13 @@ The existing button to add a new empty workspace is replaced by button
 that transforms the current window into a new workspace. Also we have a new
 infographics on list page instead of initial empty workspaces.
 
-[ ] **• Create workspace from the current window
+[ ] **• Create workspace from the current window (Issue #3)
 [ ] **• Infographics for empty workspace list
 [ ] *•• Do not create initial empty workspaces
 [ ] *•• Add attached tab to workspace
 [ ] **• Disable custom tab groups inside workspace
-[ ] *•• Bug: A change is not saved, if the window is closed quickly
+[ ] *•• Bug: A change is not saved, if the window is closed quickly (Issue #2)
+[ ] *•• Support keyboard shortcuts (Issue #7)
 
 # v0.6
 
