--- a/TODO
+++ b/TODO
@@ -4,7 +4,8 @@ The existing button to add a new empty workspace is replaced by button
 that transforms the current window into a new workspace. Also we have a new
 infographics on list page instead of initial empty workspaces.
 
-[ ] **• Create workspace from the current window (Issue #3)
+[*] **• Create workspace from the current window (Issue #3)
+[ ] *•• Improve Add new workspace button
 [ ] **• Infographics for empty workspace list
 [ ] *•• Do not create initial empty workspaces
 [ ] *•• Add attached tab to workspace
@@ -27,3 +28,4 @@ infographics on list page instead of initial empty workspaces.
 [ ] *** Synchronization
 [ ] *•• Get rid of chrome-extension-async lib
 [ ] *** E2E tests
+[ ] *•• Mark open workspaces in the list
