--- a/TODO
+++ b/TODO
@@ -4,14 +4,14 @@ The existing button to add a new empty workspace is replaced by button
 that transforms the current window into a new workspace. Also we have a new
 infographics on list page instead of initial empty workspaces.
 
-[*] **• Create workspace from the current window (Issue #3)
+[x] **• Create workspace from the current window (Issue #3)
 [ ] *•• Improve Add new workspace button
 [ ] **• Infographics for empty workspace list
 [ ] *•• Do not create initial empty workspaces
 [ ] *•• Add attached tab to workspace
 [ ] **• Disable custom tab groups inside workspace
 [ ] *•• Bug: A change is not saved, if the window is closed quickly (Issue #2)
-[ ] *•• Support keyboard shortcuts (Issue #7)
+[x] *•• Support keyboard shortcuts (Issue #7)
 
 # v0.6
 
