Infographics for empty workspace list

--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ infographics on list page instead of initial empty workspaces.
 
 [x] **• Create workspace from the current window (Issue #3)
 [ ] *•• Improve Add new workspace button
-[ ] **• Infographics for empty workspace list
+[x] **• Infographics for empty workspace list
 [x] *•• Do not create initial empty workspaces
 [ ] *•• Add attached tab to workspace
 [ ] **• Disable custom tab groups inside workspace
@@ -34,3 +34,4 @@ infographics on list page instead of initial empty workspaces.
 [ ] *•• Show dialog to remove workspace when the last tab is closed
 [ ] **• Better design
 [ ] **• Intro video
+[ ] **• Use shadow DOM with scoped CSS for views
