--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@ infographics on list page instead of initial empty workspaces.
 
 # v0.6
 
+[ ] *** Automatically close other workspace (Issue #9)
 [ ] **• Send tab to a workspace
 [ ] **• Set up Patreon / Github Sponsors
 [ ] *** Onboarding page
