--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@ infographics on list page instead of initial empty workspaces.
 [x] *•• Add attached tab to group
 [x] **• Disable custom tab groups inside workspace
 [x] *•• Support keyboard shortcuts (Issue #7)
-[ ] *•• Improve keyboard control
+[x] *•• Improve keyboard control
 [ ] *•• Better explaining text in Remove view
 [ ] *•• 🐞 A change is not saved if the window is closed quickly (Issue #2)
 [x] *•• 🐞 Workspace is not active if restored from another window
