--- a/TODO
+++ b/TODO
@@ -12,7 +12,7 @@ infographics on list page instead of initial empty workspaces.
 [x] **• Disable custom tab groups inside workspace
 [x] *•• Support keyboard shortcuts (Issue #7)
 [x] *•• Improve keyboard control
-[ ] *•• Better explaining text in Remove view
+[x] *•• Better explaining text in Remove view
 [ ] *•• 🐞 A change is not saved if the window is closed quickly (Issue #2)
 [x] *•• 🐞 Workspace is not active if restored from another window
 [x] *•• 🐞 Pinned tabs are not preserved
