Option: Automatically minimize/close other workspace

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 # v0.6 Options & Onboarding page
 
-[ ] *** Option: Automatically minimize/close other workspace (Issue #9)
+[*] *** Option: Automatically minimize/close other workspace (Issue #9)
 [ ] **• Send tab to a workspace
 [ ] *** Onboarding page
 
