Move tab to workspace

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 # v0.6 Options & Onboarding page
 
 [*] *** Option: Automatically minimize/close other workspace (Issue #9)
-[ ] **• Send tab to a workspace
+[*] **• Move tab to workspace
 [ ] *** Onboarding page
 
 # v0.7
