--- a/TODO
+++ b/TODO
@@ -1,19 +1,19 @@
 # v0.6 Options & Onboarding page
 
+[ ] *** Onboarding page
 [*] *** Option: Automatically minimize/close other workspace (Issue #9)
 [*] **- Move tab to workspace
-[ ] *** Onboarding page
-[*] *-- Workspace list - responsive width 
+[*] *-- Workspace list - responsive width
+[*] *** Drag to order workspaces (Issue #8)
 
 # v0.7
-
-[ ] *** Drag to order workspaces (Issue #8)
 [ ] **• Dark theme
 
-# Backlog
-
-[ ] *** Synchronization
+# v0.8
 [ ] *** Translations
+
+# Backlog
+[ ] *** Synchronization
 [ ] *•• Get rid of chrome-extension-async lib
 [ ] *** E2E tests
 [ ] *•• Mark open workspaces in the list
