--- a/TODO
+++ b/TODO
@@ -5,6 +5,9 @@
 [*] Workspace list - responsive width 
 [*] Drag to order workspaces (Issue #8)
 
+# v0.6.1
+[ ] Show confirmation dialog before cleaning existing Tab Groups
+
 # v0.7
 [ ] Dark theme
 [ ] What`s New page
