--- a/TODO
+++ b/TODO
@@ -5,19 +5,21 @@
 [*] Workspace list - responsive width 
 [*] Drag to order workspaces (Issue #8)
 
-# v0.6.1
+# v0.7
 [ ] Show confirmation dialog before cleaning existing Tab Groups
 
-# v0.7
+# v0.8
 [ ] Dark theme
-[ ] What`s New page
+[ ] Mark open workspaces in the list
+    outline: 1px solid #c62828a1;
+    outline-offset: 2px;
 
 # Backlog
+[ ] What`s New page
 [ ] Synchronization
 [ ] Translations
 [ ] Get rid of chrome-extension-async lib
 [ ] E2E tests
-[ ] Mark open workspaces in the list
 [ ] Show dialog to remove workspace when the last tab is closed
 [ ] Intro video
 [ ] Show info page instead of blank tab in empty workspace
