Import & export (Issue #18)

--- a/TODO
+++ b/TODO
@@ -2,7 +2,8 @@
 [x] Restore full-screen window (Issue #15)
 [x] Option to keep workspaces sorted by name (Issue #19)
 [x] file:// stops entire workspace from opening (Issue #29)
-[ ] problems creating new workspace (Issue #31)
+[x] Import & export (Issue #18)
+[ ] Problems creating new workspace (Issue #31)
 [ ] Show confirmation dialog before cleaning existing Tab Groups
 [ ] Mark open workspaces in the list
     outline: 1px solid #c62828a1;
@@ -10,7 +11,6 @@
 
 # v0.8
 [ ] Dark theme
-[ ] Import & export (Issue #18)
 [ ] Get rid of chrome-extension-async lib
 
 # Backlog
