--- a/TODO
+++ b/TODO
@@ -18,3 +18,4 @@
 [ ] Show info page instead of blank tab in empty workspace
 [ ] Preserve tab groups
 [ ] New window - offer to create a workspace
+[ ] Consider supporting multiple windows
